NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Grouped_By_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Grouped_By_Line_Number__c</fullName>
    <description>the quote line number that belongs to the unit. Groups all the options together with a unit that they are bundled with</description>
    <label>Grouped By Line Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>