NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Hours__c</fullName>
    <formula>IF(AND(ISPICKVAL( NATT_BluEdge_Price_Type__c ,&apos;Optional Coverage&apos;), CONTAINS(SBQQ__ProductCode__c, &apos;-T0240&apos;), SBQQ__Quote__r.NATT_BluEdge_Elite__c),
NATT_Elite_Repair_Hours__c,
CASE(NATT_BluEdge_Price_Type__c,&apos;Extended Basic&apos;,TEXT(NATT_Extended_Basic_Hours__c),&apos;Major Component&apos;,TEXT(NATT_Major_Component_Hours__c),&apos;Optional Coverage&apos;,TEXT(NATT_Optional_Coverage_Hours__c),&apos;Elite Repair&apos;,NATT_Elite_Repair_Hours__c,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours</label>
    <type>Text</type>
</CustomField>