NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Include_in_Interim__c.field-meta.xml
<CustomField>
    <fullName>NATT_Include_in_Interim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zDeleteInclude in Interim</label>
    <type>Checkbox</type>
</CustomField>