NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Interim_Interval_hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_Interim_Interval_hours__c</fullName>
    <label>Interim Interval (hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>