NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Interim_Months__c.field-meta.xml
<CustomField>
    <fullName>NATT_Interim_Months__c</fullName>
    <description>For Maintenance Calculations</description>
    <label>Interim Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>