NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Interim_Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>NATT_Interim_Parts_Cost__c</fullName>
    <label>Interim Parts Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>