NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Inventory__c.field-meta.xml
<CustomField>
    <fullName>NATT_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Serial Number</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Model Number does not match for the Inventory.</errorMessage>
        <filterItems>
            <field>$Source.NATT_Model_Number__c</field>
            <operation>equals</operation>
            <valueField>NATT_Inventory__c.NATT_Model_Number__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>NATT_Inventory__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>