NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>