NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Legacy_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Legacy_Quantity__c</fullName>
    <label>Legacy Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>