NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Legacy_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Legacy_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Unit</label>
    <type>Checkbox</type>
</CustomField>