NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_List_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_List_Price__c</fullName>
    <formula>IF(SBQQ__Product__r.NATT_EMCC__c = TRUE,null, SBQQ__ListPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>