NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Lotus_Notes_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Lotus_Notes_Price__c</fullName>
    <description>used for uploading data from lotus notes for migration. If there is any value in this field then it will update the list price accordingly</description>
    <label>Lotus Notes Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>