NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Maintenance_Calc_Req__c.field-meta.xml
<CustomField>
    <fullName>NATT_Maintenance_Calc_Req__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if the this product needs maintenance calculations for BluEdge</description>
    <label>Maintenance Calc Req</label>
    <type>Checkbox</type>
</CustomField>