NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Migrated_RSD__c.field-meta.xml
<CustomField>
    <fullName>NATT_Migrated_RSD__c</fullName>
    <label>Migrated RSD</label>
    <type>Date</type>
</CustomField>