NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Miles__c.field-meta.xml
<CustomField>
    <fullName>NATT_Miles__c</fullName>
    <label>Miles</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>