NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Model__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model__c</fullName>
    <formula>IF( TEXT(NATT_Tavant_Id__c)=&quot;&quot; &amp;&amp; NATT_P_N__c &lt;&gt; &quot;BLUEDGE ENHANCE&quot; &amp;&amp; NATT_P_N__c &lt;&gt; &quot;BLUEDGE ELITE&quot;,&quot;&quot;, NATT_Model_Number2__c)</formula>
    <label>Model</label>
    <type>Text</type>
</CustomField>