NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Model_Number2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number2__c</fullName>
    <description>written by flow during asset selection.</description>
    <label>Model Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>