NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Model_Number__c</fullName>
    <description>dependent</description>
    <label>NATT Model Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Model_Number</valueSetName>
    </valueSet>
</CustomField>