NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Net_End_Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Net_End_Customer_Price__c</fullName>
    <description>NATT</description>
    <formula>SBQQ__EffectiveQuantity__c  *  NATT_End_Customer_Price__c</formula>
    <label>Total End Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>