NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>NATT_Net_Total__c</fullName>
    <formula>IF(AND(SBQQ__Quote__r.NATT_Per_Hour_Billing__c,NATT_EMCC__c),null, SBQQ__NetTotal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>