NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Number_of_Maintenance_Child__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Maintenance_Child__c</fullName>
    <formula>SBQQ__RequiredBy__r.NATT_Number_of_Maintenance_Periods__c</formula>
    <label>Number of Maintenance Child</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>