NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Number_of_Maintenance_Periods__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Maintenance_Periods__c</fullName>
    <description>populated by flow</description>
    <label>Number of Maintenance Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>