NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Number_of_Price_Rule_Updates__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Price_Rule_Updates__c</fullName>
    <defaultValue>0</defaultValue>
    <description>counts how many times price rules fire on a line. to be used with validation.</description>
    <label>Number of Price Rule Updates</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>