NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Oil_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Oil_Type__c</fullName>
    <description>natt cmra bluedge</description>
    <label>Oil Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_CMRA_Oil_Type</valueSetName>
    </valueSet>
</CustomField>