NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Optional_Coverage_Months__c.field-meta.xml
<CustomField>
    <fullName>NATT_Optional_Coverage_Months__c</fullName>
    <label>Optional Coverage Months</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_BluEdge_Months</valueSetName>
    </valueSet>
</CustomField>