NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Optional_Coverage_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_Optional_Coverage_Price__c</fullName>
    <label>Optional Coverage Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>