NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Original_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>populated for new opportunities or comes from the amended asset if amendment</description>
    <label>Original Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>