NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Original_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Order_Id__c</fullName>
    <label>Original Order Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>