NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Policy_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Policy_Code__c</fullName>
    <description>Used for Tavant integration</description>
    <label>Policy Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>