NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Price_Comparison_CTE_Unit__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_Comparison_CTE_Unit__c</fullName>
    <description>NATT</description>
    <label>Price Comparison - CTE Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>