NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Price_Per_Hour__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_Per_Hour__c</fullName>
    <label>Price Per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>