NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Price_Per_Hour_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Price_Per_Hour_End_Customer__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Price Per Hour (End Customer)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>