NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Product_Is_Labor__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Is_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this line represents labor</description>
    <label>zDeleteProduct Is Labor</label>
    <type>Checkbox</type>
</CustomField>