NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Line__c</fullName>
    <description>Product line of the product</description>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Product_Line</valueSetName>
    </valueSet>
</CustomField>