NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Quote_Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Record_Type_ID__c</fullName>
    <formula>CASESAFEID(SBQQ__Quote__r.RecordTypeId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Record Type ID</label>
    <type>Text</type>
</CustomField>