NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Quote_Recordtype_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Recordtype_Dev_Name__c</fullName>
    <description>for use with flow to identify the record type for this quote line</description>
    <formula>SBQQ__Quote__r.RecordType.DeveloperName</formula>
    <label>Quote Recordtype Dev Name</label>
    <type>Text</type>
</CustomField>