NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Quote_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Status__c</fullName>
    <description>for natt for flow</description>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Status</label>
    <type>Text</type>
</CustomField>