NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Type__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Type</label>
    <type>Text</type>
</CustomField>