NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Requested_Ship_Date__c</fullName>
    <description>NATT the ship date for the quote line</description>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>