NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Requested_Ship_Date_Formatted__c.field-meta.xml
<CustomField>
    <fullName>NATT_Requested_Ship_Date_Formatted__c</fullName>
    <formula>TEXT(NATT_Requested_Ship_Date__c)</formula>
    <label>Requested Ship Date Formatted</label>
    <type>Text</type>
</CustomField>