NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_RequiredByProductName__c.field-meta.xml
<CustomField>
    <fullName>NATT_RequiredByProductName__c</fullName>
    <label>Required By Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>