NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_RSD_Original_Price__c.field-meta.xml
<CustomField>
    <fullName>NATT_RSD_Original_Price__c</fullName>
    <label>RSD Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>