NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>