NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Ship_Date__c</fullName>
    <description>The date the item has shipped. for amendment quotes. this value comes from the asset which comes from the order product</description>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>