NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Shipped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipped_Quantity__c</fullName>
    <formula>SBQQ__UpgradedAsset__r.NATT_Shipped_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipped Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>