NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_SM0010_Labor_Hours__c.field-meta.xml
<CustomField>
    <fullName>NATT_SM0010_Labor_Hours__c</fullName>
    <label>SM0010_Labor_Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>