NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_SM0060_Parts_Cost__c.field-meta.xml
<CustomField>
    <fullName>NATT_SM0060_Parts_Cost__c</fullName>
    <label>SM0060 Parts Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>