NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Special_Option__c.field-meta.xml
<CustomField>
    <fullName>NATT_Special_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT</description>
    <label>Special Option</label>
    <type>Checkbox</type>
</CustomField>