NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Special_Request__c.field-meta.xml
<CustomField>
    <fullName>NATT_Special_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>NATT Twin Field</description>
    <label>Special Request</label>
    <type>Checkbox</type>
</CustomField>