NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Standby_Hours_Year__c.field-meta.xml
<CustomField>
    <fullName>NATT_Standby_Hours_Year__c</fullName>
    <formula>NATT_CMRA_Hours_Per_Year__c - NATT_Engine_Hours_Year__c</formula>
    <label>zDeleteStandby Hours/Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>