NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Start_Stop_Percentage__c.field-meta.xml
<CustomField>
    <fullName>NATT_Start_Stop_Percentage__c</fullName>
    <description>for CMRA NATT</description>
    <label>zDeleteStart/Stop Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>