NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Term__c.field-meta.xml
<CustomField>
    <fullName>NATT_Term__c</fullName>
    <description>Used for Tavant Integration. Number of months for the warranty coverage.</description>
    <label>Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>