NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Terms_Added__c.field-meta.xml
<CustomField>
    <fullName>NATT_Terms_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for flow</description>
    <label>Terms Added</label>
    <type>Checkbox</type>
</CustomField>