NATTQA-ENV/force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NATT_Trailer__c.field-meta.xml
<CustomField>
    <fullName>NATT_Trailer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>used for filtering NATT</description>
    <label>Trailer</label>
    <type>Checkbox</type>
</CustomField>